--- a/WPFdemo/App.xaml
+++ b/WPFdemo/App.xaml
@@ -2,12 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFdemo"
-             StartupUri="MainWindow.xaml">
+             StartupUri="FirstWindow.xaml">
     <Application.Resources>
         <Style TargetType="Button">
-            <Setter Property="Background" Value="#FFFFE4FF"></Setter>
+            <Setter Property="Background" Value="#ff4a6d"></Setter>
             <Setter Property="Height" Value="40"></Setter>
             <Setter Property="Margin" Value="10"></Setter>
+            <Setter Property="FontSize" Value="22"></Setter>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Tahoma"></Setter>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontFamily" Value="Tahoma"></Setter>
+            <Setter Property="Height" Value="25"></Setter>
+            <Setter Property="Width" Value="350"></Setter>
         </Style>
     </Application.Resources>
 </Application>
