--- a/WPFdemo/Основное/FirstWindow.xaml
+++ b/WPFdemo/Основное/FirstWindow.xaml
@@ -1,17 +1,19 @@
-﻿<Window x:Class="WPFdemo.MainWindow"
+﻿<Window x:Class="WPFdemo.FirstWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFdemo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Background="{x:Null}"
+        Title="FirstWindow" Height="450" Width="800" Background="{x:Null}"
         Icon="Resources/beauty_logo.ico">
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="94*"/>
             <RowDefinition Height="325*"/>
         </Grid.RowDefinitions>
+        <Grid Background="#ffe4ff" Grid.Row="0"></Grid>
+        <TextBlock Text="Услуги салона красоты" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="33"></TextBlock>
         <Image Source="Resources/beauty_logo.png" HorizontalAlignment="Left" Width="89"></Image>
         <Frame Name="MainFrame" Grid.Row="1"></Frame>
         <Button Content="Назад" Grid.Row="0" HorizontalAlignment="Right" Height="Auto" Margin="0,30,10,31" Width="37"></Button>
